--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "puppeteer": "^22.8.0",
+    "puppeteer-cluster": "^0.24.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "user-agents": "^1.1.212"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
